--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
           </blockquote>
           <address class="testimonial__author">
             <img src="img/user-1.jpg" alt="" class="testimonial__photo" />
-            <h6 class="testimonial__name">Aarav Lynn</h6>
+            <h6 class="testimonial__name">Shrey Shah</h6>
             <p class="testimonial__location">San Francisco, USA</p>
           </address>
         </div>
@@ -220,8 +220,8 @@
           </blockquote>
           <address class="testimonial__author">
             <img src="img/user-2.jpg" alt="" class="testimonial__photo" />
-            <h6 class="testimonial__name">Miyah Miles</h6>
-            <p class="testimonial__location">London, UK</p>
+            <h6 class="testimonial__name">Jay Prajapati</h6>
+            <p class="testimonial__location">Toronto, Canada</p>
           </address>
         </div>
       </div>
@@ -241,8 +241,8 @@
           </blockquote>
           <address class="testimonial__author">
             <img src="img/user-3.jpg" alt="" class="testimonial__photo" />
-            <h6 class="testimonial__name">Francisco Gomes</h6>
-            <p class="testimonial__location">Lisbon, Portugal</p>
+            <h6 class="testimonial__name">Ronak Sirwani</h6>
+            <p class="testimonial__location">London, UK</p>
           </address>
         </div>
       </div>
